--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "run-s clean build:eleventy build:postcss",
     "build:eleventy": "cross-env ELEVENTY_PRODUCTION=true eleventy",
     "build:postcss": "cross-env NODE_ENV=production postcss src/styles/*.css --dir _site",
-    "clean": "rimraf _site"  
+    "clean": "rimraf _site"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
     "autoprefixer": "^10.3.3",
     "cross-env": "^7.0.3",
     "cssnano": "^5.0.8",
+    "eleventy-plugin-seo": "^0.5.2",
     "html-minifier": "^4.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.3.6",
